including development and beta versions. For a less detailed overview
of the main changes in each public release, see the file VERSIONS.txt.

-----------------------------------------------------------------------------
Latest additions (reverse chronological)
-----------------------------------------------------------------------------

* New "rows" option for matrix exports (-exportrows switch)
* Ability to display extra  info about MTBDDs (-extraddinfo switch)
* Cumulative reward properties for DTMCs
* Support for 64-bit architectures
* Addition of F and G operators to property language (eventually/globally)
* Redesign of the simulator GUI, plus new features:
  - ability to display cumulated time/rewards
  - new "Configure view" dialog
  - easier selection of next step (double click) 
* Resizeable experiment results table 

-----------------------------------------------------------------------------
Version 3.1.1 (5/4/2007)
-----------------------------------------------------------------------------

* Minor bug fixes:
  - bug in "New Graph" dialog which fails on Java 6
  - threading bug which can cause graph plotting to freeze
  - fix to possible failure of Windows launch scripts

-----------------------------------------------------------------------------
Version 3.1 (15/11/2006)
-----------------------------------------------------------------------------

* No changes

-----------------------------------------------------------------------------
Version 3.1.beta1 (3/11/2006)
-----------------------------------------------------------------------------

* New installer for Windows binary
* Models can now have multiple (named) reward structures
* New -simpath switch for command-line generation of random paths with simulator
* Minor PRISM language improvements:
  - type keyword does not need to be first thing in model file
  - doubles in exponential form (1.4e-9) and unary minus (-1) allowed
* PRISM settings file now used by command-line version too